# Kavachswap

./: .env.example  .gitignore  CHART-WIDGETS.md  CLOUDFLARE-DEPLOY-AND-FAQS.md  COMMANDS.md  Cargo.toml  FINISHING-GUIDE.md  HOSTING.md  Kavach-3D-Enterprise-Dashboard-BACKUP.html  LOCAL-VALIDATOR.md  MAINTENANCE.md  MULTI-DEX-HOSTING-AND-ETH-REPORT.md  MULTICHAIN-HOSTING-AND-STATUS.md  README.md  REAL-DATA.md  VERIFY-BUILDS.md  api-spec.md  app.html  index.html  openapi.optional.yaml  package-lock.json  package.json  vite.config.ts
docs/: DEPLOY.md  FEE-PERCENTAGE-DESIGN.md  KAVACH-CORE-PLAN.md  PROTOCOL-STATUS-AND-POOL-FEE.md  STATUS.md  TESTING.md
e2e/kavach_amm_core_suite/: Cargo.toml  README.md  kavach_amm_core_tests.rs  kavach_amm_e2e.test.js  package-lock.json  package.json  security_verify.sh
programs/: BUILD-CHECKLIST.md  WHICH-4-AMMs.md
programs/kavach_amm/: Cargo.toml  SWAP-COMPARISON.md
programs/kavach_amm/src/: error.rs  events.rs  lib.rs  math.rs  processor.rs  state.rs
programs/kavach_amm/src/instructions/: add_liquidity.rs  collect_fees.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
programs/kavach_amm_8tier/: Cargo.toml
programs/kavach_amm_8tier/src/: error.rs  events.rs  lib.rs  processor.rs  state.rs
programs/kavach_amm_8tier/src/instructions/: add_liquidity.rs  collect_fees.rs  initialize_pool.rs  remove_liquidity.rs  swap.rs
programs/kavach_amm_clmm/: Cargo.toml
programs/kavach_amm_clmm/src/: error.rs  events.rs  lib.rs  math.rs  processor.rs  state.rs
programs/kavach_amm_clmm/src/instructions/: add_liquidity.rs  collect_fees.rs  initialize_pool.rs  remove_liquidity.rs  swap.rs
programs/kavach_amm_core/: Cargo.toml  README.md  SECURITY-CHECKLIST.md  VERIFIABLE-BUILD.md  error.rs  events.rs  lib.rs  math.rs  processor.rs  state.rs  token_io.rs
programs/kavach_amm_core/src/: error.rs  events.rs  lib.rs  math.rs  processor.rs  state.rs  token_io.rs
programs/kavach_amm_core/src/instructions/: add_initial_liquidity.rs  add_liquidity.rs  collect_fees.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
programs/kavach_amm_stable/: Cargo.toml  USER-GUIDE.md
programs/kavach_amm_stable/src/: error.rs  events.rs  lib.rs  math.rs  processor.rs  state.rs  token_io.rs
programs/kavach_amm_stable/src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs  update_amp.rs
programs/kavach_bonding_curve_amm/: Cargo.toml  README.md
programs/kavach_bonding_curve_amm/src/: error.rs  events.rs  instruction.rs  lib.rs  math.rs  state.rs
programs/kavach_rewards/: Cargo.toml
programs/kavach_rewards/src/: entry.rs  error.rs  lib.rs  processor.rs  state.rs  system_cpi.rs
programs/kavach_router/: AUDIT.md  Cargo.toml  IMPROVEMENTS-REBUILD.md  WHEN-INDEX-ADAPTER.md
programs/kavach_router/src/: error.rs  instruction.rs  lib.rs  state.rs
public/: _headers  _redirects  non-custodial-statement.html  privacy-policy.html  risk-disclosure.html  terms-of-service.html  verifiable-builds.html
public/.well-known/: security.txt
scripts/: deploy-kvh.ts  init-rewards-global.mjs
src/: App.tsx  index.css  main.tsx  providers.tsx
src/components/: AirdropCard.tsx  BundlerCard.tsx  CreatePoolCard.tsx  CreateTokenCard.tsx  DEXToolsPoolChart.tsx  JupiterSwapWidget.tsx  LaunchTokenCard.tsx  LiquidityCard.tsx  PoolsCard.tsx  PortfolioCard.tsx  RewardsCard.tsx  StableSwapCard.tsx  SwapCard.tsx  SwapCardOriginal.tsx  TradingViewWidget.tsx
src/lib/: airdrop.ts  airdropChecker.ts  ammCore.ts  ammStable.ts  cluster.ts  connection.ts  constants.ts  creatorMints.ts  fiatRamp.ts  history.ts  metadata.ts  portfolio.ts  revoke.ts  rewards.ts  router.ts  send.ts  swap.ts  token.ts  tokenReader.ts  top-lps.ts  walletBalances.ts
