# Workspace for reproducible builds + `solana-verify verify-from-repo`.
# Lib name for verify: `kavach_amm_core` (see programs/kavach_amm_core/Cargo.toml).
# https://solana.com/docs/programs/verified-builds
# https://github.com/solana-foundation/solana-verifiable-build

[workspace]
members = ["programs/kavach_amm_core"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
