[package]
name = "kavach_amm_8tier"
version = "1.0.0"
edition = "2021"
description = "Kavach 8-tier AMM - 8 fee choices (0.25% to 2.5%), 50/50 split, no Anchor"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
spl-token = "4.0"
borsh = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
