[package]
name = "kavach_amm_core"
version = "1.0.0"
edition = "2021"
description = "Kavach Core AMM - multiple fee tiers, full Token-2022 (incl. mixed), 50/50, 0.02 SOL pool creation (frontend)"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
spl-token = "4.0"
# Removed spl-associated-token-account: it pulled heavy token-2022 feature sets; ATA is derived inline in collect_fees.
borsh = "0.10"
thiserror = "1.0"
solana-security-txt = "1.1.2"
default-env = "0.1"

# spl-token-2022 1.0.0: `split_proof_generation` builds on the host only (`not(target_os = "solana")`) but imports
# symbols gated behind `zk-ops`, so `cargo check` on Windows/macOS/Linux needs `zk-ops`.
# For SBF, omit `zk-ops`: confidential-transfer proof code exceeds the ~4KB stack limit.
[target.'cfg(not(target_os = "solana"))'.dependencies]
spl-token-2022 = { version = "1.0", default-features = false, features = ["no-entrypoint", "zk-ops"] }

[target.'cfg(target_os = "solana")'.dependencies]
spl-token-2022 = { version = "1.0", default-features = false, features = ["no-entrypoint"] }

# Removed solana-program-test/solana-sdk: they pull solana_rbpf 0.8.0 which is yanked on crates.io.
[dev-dependencies]

# Release profile lives in repo-root Cargo.toml (workspace).
